--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,7 +1,13 @@
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  padding: 0;
+  margin: 0;
+}
 .header-image {
-  background-image: url("../img/Bru.png");
+  background-image: url(/vite-project/img/ok2.jpg);
   background-size: cover;
   height: 100%;
-  clip-path: polygon(59% 0, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%);
   position: relative;
 }
