--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -12,6 +12,12 @@ body,
   --h2: 10rem;
   --gold: #ffd700;
 }
+.pic {
+  background-image: url(img/ok.jpg);
+  background-position: right;
+  width: 191.3rem;
+  height: 85.9rem;
+}
 .box {
   background-color: var(--red);
   height: var(--h2);
