--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -5,6 +5,8 @@ body,
   font-size: 62.5%;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 :root {
   --red: #ff0000;
