--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -16,6 +16,7 @@ body {
   --h2: 10rem;
   --gold: #ffd700;
   --Text: center;
+  --pos: absolute;
 }
 .pic {
   background-image: url(img/ok.jpg);
@@ -30,11 +31,11 @@ body {
 .text {
   font-size: var(--h1);
   color: var(--gold);
-  position: absolute;
+  position: var(--pos);
   left: 28rem;
 }
 .home {
-  position: absolute;
+  position: var(--pos);
   left: 75rem;
   top: 0.5rem;
 }
