--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -5,7 +5,6 @@ body,
   font-size: 62.5%;
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
 body {
   background-color: var(--red);
@@ -24,7 +23,7 @@ body {
   width: 192rem;
   height: 86.9rem;
 }
-.box {
+.boxx {
   background-color: var(--red);
   height: var(--h2);
 }
@@ -49,4 +48,19 @@ h2 {
   font-size: var(--h1);
   text-align: var(--Text);
   color: var(--gold);
+}
+.flex {
+  font-size: 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.box {
+  border: 3px solid pink;
+  height: 35rem;
+  width: 32%;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: black 0.5rem 0.5rem 0.5rem;
+  background-size: cover;
+  margin: 8px;
 }
