--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -64,3 +64,21 @@ h2 {
   background-size: cover;
   margin: 8px;
 }
+.box-1 {
+  background-image: url(img/ok3.jpg);
+}
+.box-2 {
+  background-image: ;
+}
+.box-3 {
+  background-image: ;
+}
+.box-4 {
+  background-image: ;
+}
+.box-5 {
+  background-image: ;
+}
+.box-6 {
+  background-image: ;
+}
