--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -68,17 +68,17 @@ h2 {
   background-image: url(img/ok3.jpg);
 }
 .box-2 {
-  background-image: ;
+  background-image: url(img/ok4.jpg);
 }
 .box-3 {
-  background-image: ;
+  background-image: url(img/ok5.jpg);
 }
 .box-4 {
-  background-image: ;
+  background-image: url(img/ok6.jpg);
 }
 .box-5 {
-  background-image: ;
+  background-image: url(img/ok7.jpg);
 }
 .box-6 {
-  background-image: ;
+  background-image: url(img/ok9.jpg);
 }
