--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -44,7 +44,8 @@ h1 {
   background-color: var(--red);
   border-radius: 16px;
 }
-h2 {
+h2,
+h3 {
   font-size: var(--h1);
   text-align: var(--Text);
   color: var(--gold);
@@ -58,6 +59,16 @@ h2 {
   border: 3px solid pink;
   height: 35rem;
   width: 32%;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: black 0.5rem 0.5rem 0.5rem;
+  background-size: cover;
+  margin: 8px;
+}
+.boxs {
+  border: 3px solid pink;
+  height: 42.3rem;
+  width: 50%;
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: black 0.5rem 0.5rem 0.5rem;
