--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -125,5 +125,5 @@ h2 {
   background-image: url(img/h.jpg);
 }
 .box-11 {
-  background-image: url(img/u.jpg);
+  background-image: url(img/n.jpg);
 }
