--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -52,10 +52,9 @@ h2 {
   color: var(--gold);
 }
 .flex {
-  font-size: 3rem;
   display: var(--flex);
   justify-content: space-between;
-  font-size: 5rem;
+  font-size: 4rem;
   color: var(--gold);
 }
 .box {
@@ -96,6 +95,39 @@ h2 {
 .read {
   font-size: 5rem;
   color: var(--gold);
+}
+.box:hover {
+  outline: 0.5rem solid pink;
+}
+.box-1,
+.box-2,
+.box-3,
+.box-4,
+.box-5,
+.box-6 {
+  transition: 0.5s ease;
+}
+.box-1:hover,
+.box-2:hover,
+.box-3:hover,
+.box-4:hover,
+.box-5:hover,
+.box-6:hover {
+  transform: scale(0.85, 0.85);
+  transition: 0.5s ease;
+}
+.box-7,
+.box-8,
+.box-9,
+.box-10 {
+  transition: 1s ease;
+}
+.box-7:hover,
+.box-8:hover,
+.box-9:hover,
+.box-10:hover {
+  border-radius: 50%;
+  transition: 1s ease;
 }
 .box-1 {
   background-image: url(img/ok3.jpg);
