--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -6,6 +6,9 @@ body,
   padding: 0;
   margin: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   background-color: var(--red);
   color: var(--gold);
