--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -147,6 +147,10 @@ h2 {
   .pic {
     background-size: contain;
   }
+  .boxz {
+    background-size: contain;
+    height: 30rem;
+  }
 }
 
 .box-1 {
